Add and clarify some examples